--- a/css/index.css
+++ b/css/index.css
@@ -51,3 +51,11 @@ body{
 
     text-decoration: none;
 }
+
+.footer {
+    background-color: #2B2B39;
+}
+
+.bottomfooter {
+    background-color: #20202D;
+}
