--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:wght@500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@500;700;900&display=swap');
 /* link para importar as fontes do google */
 
 * {
@@ -10,30 +10,13 @@ a{
     text-decoration-line: none;
 }
 
-.header {
+.about-us {
+    background-color: hsla(0, 0%, 100%, 1);
+    height: 100vh;
     display: flex;
+    justify-content: space-evenly;
 }
 
-#header-logo {
-    margin: 35px 72px 31px 175px;
+.about-us-images {
     display: flex;
-}
-
-.header-logo-img {
-    padding-right: 6px;
-}
-
-.header-logo-text {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 24px;
-}
-
-.header-navigation-menu ul{
-    display: flex;
-    list-style: none;
-}
-
-.header-navigation-menu ul li{
-    padding: 40px 32px 36px 0px;
 }
