--- a/css/index.css
+++ b/css/index.css
@@ -89,17 +89,30 @@ p {
 .imagesmembers {
   display: flex;
   flex-direction: row;
-  width: fit-content;
+  gap: 30px;
+
+  text-align: center;
+}
+
+.imgmembers {
+  width: 270px;
+  height: 316px;
+
+  margin-bottom: 130px;
+
+  border: 2px solid rgba(243, 243, 243, 0.5);
+  border-radius: 14px;
+}
+
+.imgmembers:hover {
+  box-shadow: 0px 34px 68px rgba(116, 115, 128, 0.1);
 }
 
 .imagesmembers img {
-  margin-bottom: 4px;
+  margin-top: 30px;
+  margin-bottom: 34px;
   width: 170px;
   height: 173px;
-}
-
-.imagesmembers p {
-  text-align: center;
 }
 
 .imagesmembers strong {
@@ -107,7 +120,16 @@ p {
 
   font-weight: 600;
   font-size: 24px;
+  line-height: 26px;
+
   color: #2f2c4a;
+}
+
+@media (max-width: 800px) {
+    .imagesmembers {
+      flex-direction: column;
+      flex-wrap: wrap;
+    }
 }
 
 /* PUBLICIDADE / SIXTH PAGE */
