--- a/css/index.css
+++ b/css/index.css
@@ -3,12 +3,53 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
-  background: #FFFFFF;
-  font-family: Inter;
+  background-attachment:fixed;
+  height:100%;
+  background-image: linear-gradient(#FFFFFF, #F1F6FD);
 }
-font-family: Inter;
 
+.cabeca{
+  margin: 60px 500px 64px 499px;
+  text-align: center;
+}
+
+.container{
+  width: 100%;
+  height: auto;  
+  display: flex;
+} 
+
+.box{
+  background: #FFFFFF;
+  box-shadow: 14px 22px 52px -12px rgba(127, 127, 127, 0.13);
+  border-radius: 14px;
+}
+
+.container h1{
+  font-family: Inter;
+  font-size: 24px;
+  color: #2F2C4A; 
+}
+
+.cabeca h1{
+  font-family: Inter;
+  font-size: 36px;
+  color: #0A093D;
+  width: fit-content;
+}
+
+h2{
+  font-family: Inter;
+  font-size: 18px;
+  color: #217BF4;
+}
+
+p{
+  font-family: Inter;
+  font-size: 16px;
+  color: #656464;
+  ;
+}
