--- a/css/index.css
+++ b/css/index.css
@@ -8,29 +8,21 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-h1 {
-  width: auto;
-  height: auto;
+/* MEMBERS / FIFTH PAGE */
 
-  font-weight: 700;
-  font-size: 36px;
+/* HEAD MEMBERS */
 
-  color: #0a093d;
+.headmembers {
+  margin: auto;
+  width: 100%;
+  height: fit-content;
+
+  text-align: center;
 }
 
-h1 strong {
-  width: auto;
-  height: auto;
-
-  font-weight: 700;
-  font-size: 56px;
-
-  color: #0a093d;
-}
-
-h2 {
-  width: auto;
-  height: auto;
+.headmembers h2 {
+  margin-top: 37px;
+  margin-bottom: 10px;
 
   font-weight: 500;
   font-size: 18px;
@@ -38,9 +30,18 @@ h2 {
   color: #217bf4;
 }
 
-p {
-  width: auto;
-  height: auto;
+.headmembers h1 {
+  margin-bottom: 18px;
+
+  font-weight: 700;
+  font-size: 36px;
+
+  color: #0a093d;
+}
+
+.headmembers p {
+  height: fit-content;
+  margin-bottom: 38px;
 
   font-weight: 400;
   font-size: 16px;
@@ -48,49 +49,59 @@ p {
   color: #656464;
 }
 
-/* MEMBERS / FIFTH PAGE */
-
-/* HEAD MEMBERS */
-
-.headmembers {
-  margin: auto;
-  width: fit-content;
-  text-align: center;
-}
-
-.headmembers h2 {
-  margin-top: 37px;
-  margin-bottom: 10px;
-}
-
-.headmembers h1 {
-  margin-bottom: 18px;
-}
-
-.headmembers p {
-  margin-bottom: 38px;
-  width: 454px;
-}
-
 /* BOTÕES MEMBERS */
 
 .buttonmembers {
+  margin: auto;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  width: 474px;
+  height: 72px;
   margin-bottom: 44px;
+
+  background-color: rgba(33, 124, 244, 0.2);
+  border-radius: 14px;
 }
 
 .buttonmembers button {
+  background-color: transparent;
+  width: 150px;
+  height: 56px;
+
   text-align: center;
+
+  border-radius: 14px;
+  border-color: none;
+  border-style: none;
+  cursor: pointer;
+
+  font-weight: 500;
+  font-size: 16px;
+  color: #2f2c4a;
+}
+
+.buttonmembers button:hover {
+  background: #217bf4;
+  box-shadow: 0px 7px 22px -6px rgba(0, 72, 168, 0.34);
+  border-radius: 14px;
+
+  color: #ffffff;
+
+  transition: 0.5s;
 }
 
 /* IMAGENS MEMBERS */
 
 .imagesmembers {
-  display: flex;
-  flex-direction: row;
+  display: inline-flex;
   gap: 30px;
+  width: 100%;
+  margin-bottom: 130px;
 
+  justify-content: center;
   text-align: center;
 }
 
@@ -98,42 +109,79 @@ p {
   width: 270px;
   height: 316px;
 
-  margin-bottom: 130px;
-
   border: 2px solid rgba(243, 243, 243, 0.5);
   border-radius: 14px;
+}
+
+.imagesmembers img {
+  margin-top: 30px;
+  margin-bottom: 29px;
+  width: 170px;
+  height: 173px;
+}
+
+.imagesmembers h2 {
+  margin-bottom: 14px;
+
+  font-weight: 600;
+  font-size: 24px;
+
+  color: #2f2c4a;
+}
+.imagesmembers p {
+  margin-bottom: 30px;
+}
+
+@media (max-width: 1300px) {
+  .imagesmembers {
+    flex-wrap: wrap;
+  }
 }
 
 .imgmembers:hover {
   box-shadow: 0px 34px 68px rgba(116, 115, 128, 0.1);
 }
 
-.imagesmembers img {
-  margin-top: 30px;
-  margin-bottom: 34px;
-  width: 170px;
-  height: 173px;
-}
-
-.imagesmembers strong {
-  margin-bottom: 14px;
-
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 26px;
-
-  color: #2f2c4a;
-}
-
-@media (max-width: 800px) {
-    .imagesmembers {
-      flex-direction: column;
-      flex-wrap: wrap;
-    }
-}
-
 /* PUBLICIDADE / SIXTH PAGE */
 
 .publi {
   background-color: #e5f0fd;
+  width: 100%;
+}
+
+.textpubli h2 {
+  width: 158px;
+  height: 18px;
+  margin-bottom: 10px;
+
+  font-weight: 500;
+  font-size: 18px;
+
+  color: #217bf4;
+}
+
+.textpubli h1 {
+  width: 351px;
+  height: 104px;
+  margin-bottom: 18px;
+
+  font-weight: 700;
+  font-size: 36px;
+
+  color: #0a093d;
+}
+
+.textpubli p {
+  width: 341px;
+  height: 78px;
+  margin-bottom: 36px;
+
+  font-weight: 400;
+  font-size: 16px;
+
+  color: #656464;
+}
+
+.imgpubli {
+  
 }
