--- a/index.css
+++ b/index.css
@@ -64,6 +64,20 @@ a{
   font-weight: 400;
   font-size: 16px;
   color: hsla(0, 0%, 39%, 1);
+  margin-top: 16px;
+  margin-bottom: 36px;
+}
+
+.about-us-list {
+  list-style-type: none;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: hsla(241, 53%, 19%, 1);
+}
+
+.about-us-list li{
+  display: flex;
 }
 
 .inside-circle {
@@ -71,8 +85,16 @@ a{
   height: 8px;
   border-radius: 50%;
   background-color: hsla(214, 91%, 54%, 1);
+  position: relative;
+  margin: 7px 15px 2px 4px;
 }
 
-.about-us-list {
-  list-style-type: none;
+.outside-circle {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: hsla(214, 91%, 54%, 1);
+  opacity: 0.1;
+  position: absolute;
+  margin-top: 3px;
 }
