--- a/index.css
+++ b/index.css
@@ -98,3 +98,67 @@ a{
   position: absolute;
   margin-top: 3px;
 }
+
+#avaliations {
+  background: hsla(0, 0%, 100%, 1);
+  height: 80vh;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card-1 {
+  border: 1px solid;
+  border-image-source: linear-gradient(180deg, rgba(185, 185, 185, 0.0351) 0%, rgba(94, 94, 94, 0.0999) 100%);
+  padding: 44px 24px 40px 40px;
+  height: 220px;
+  background-color: #FFFFFF;
+  border-radius: 14px;
+  box-shadow: 0px 26px 49px rgba(146, 165, 184, 0.14);
+}
+
+.star-rating {
+  display: flex;
+}
+
+.blue-star {
+  height: 21.87px;
+  width: 22.75px;
+  margin-right: 10px;
+}
+
+.inter-500-20px {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.inter-600-16px {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  color: hsla(214, 91%, 54%, 1);
+}
+
+.inter-500-16px {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: hsla(246, 10%, 40%, 1);
+  margin-top: 12px;
+}
+
+.inter-400-16px {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: hsla(0, 0%, 55%, 1);
+  margin-top: 43px;
+  margin-bottom: 40px;
+}
+
+.inter-500-16px-2 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: hsla(214, 91%, 54%, 1);
+}
