--- a/css/index.css
+++ b/css/index.css
@@ -1,55 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
-* {
-  margin: 0;
+html, body {
   padding: 0;
-}
-
-body {
-  background-attachment:fixed;
-  height:100%;
-  background-image: linear-gradient(#FFFFFF, #F1F6FD);
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Inter;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(241, 246, 253, 0) 1.63%, #F1F6FD 20.5%, #F1F6FD 58.57%, #FFFFFF 100%);
 }
 
 .cabeca{
-  margin: 60px 500px 64px 499px;
   text-align: center;
 }
 
-.container{
-  width: 100%;
-  height: auto;  
-  display: flex;
-} 
-
-.box{
-  background: #FFFFFF;
-  box-shadow: 14px 22px 52px -12px rgba(127, 127, 127, 0.13);
-  border-radius: 14px;
-}
-
-.container h1{
-  font-family: Inter;
-  font-size: 24px;
-  color: #2F2C4A; 
-}
-
-.cabeca h1{
-  font-family: Inter;
-  font-size: 36px;
-  color: #0A093D;
-  width: fit-content;
-}
-
-h2{
-  font-family: Inter;
+.cabeca h2{
   font-size: 18px;
+  font-weight: 500;
   color: #217BF4;
+  margin-bottom: 0px;
+  margin-top: 60px;
 }
 
-p{
-  font-family: Inter;
+.cabeca h1 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #0A093D;
+  margin-top: 9px
+}
+
+.cabeca p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #656464;
+  width: 420px;
+  margin: 0 auto
+}
+
+.container{
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 80px 400px 80px 400px;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  row-gap: 44px;
+  justify-content: center;
+  margin-top: 64gitpx;
+}
+
+.container > div1{
+  background: white;
+  border-top-left-radius: 15px 15px;
+  border-bottom-left-radius: 15px 15px;
+  cursor: pointer
+
+}
+
+.container > div{
+  background: white;
+  border-top-right-radius: 15px 15px;
+  border-bottom-right-radius: 15px 15px;
+  margin-right: 44px;
+  box-shadow: 14px 22px 52px -12px rgba(127, 127, 127, 0.13);
+  cursor: pointer;
+}
+
+.container p {
+  font-weight: 400;
   font-size: 16px;
   color: #656464;
-  ;
+  margin-top: 5px;
+  margin-right: 46px;
+  margin-left: 10px;
+  line-height: 25px;
+}
+
+.container h3 {
+  font-weight: 600;
+  font-size: 24px;
+  color: #2F2C4A;
+  margin-top: 25px;
+  margin-bottom: 8px;
+  margin-left: 10px;
+  
+}
+
+.container img {
+  width: 100%;
+  margin: 20px 3px 20px;
+  margin-left: 10px;
 }
