--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 html, body {
-  padding: 0;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   box-sizing: border-box;
   font-family: Inter;
@@ -38,14 +39,13 @@ html, body {
 }
 
 .container{
-  width: 100vw;
-  height: 100vh;
+
   display: grid;
   grid-template-columns: 80px 400px 80px 400px;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   row-gap: 44px;
   justify-content: center;
-  margin-top: 64gitpx;
+  margin-top: 64px;
 }
 
 .container > div1{
