--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -58,16 +57,20 @@ color: #656464;
 }
 
 .home {
-  background: linear-gradient(311.76deg, #d4e7fe -15.24%, #ffffff 78.85%);
-  background-image: url(../img/bg.svg);
-  width: 1440px;
-  height: 746px;
+  background: linear-gradient( #ffffff 15%, #d4e7fe 85%);
+  width: 100%;
+}
+
+.initial-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .header {
   display: flex;
   flex-direction: row;
-  /*justify-content: space-between;   esse fdp tava me comendo :@*/
   justify-content: center;
   align-items: center;
   height: 90px;
@@ -96,7 +99,9 @@ color: #656464;
 .header button{
   cursor: pointer;
   margin-left: 526px;
-  width: 123px;
+  width: 100%;
+  min-width: 123px;
+  max-width: 123px;
   height: 50px;
 
   background: #217BF4;
@@ -109,6 +114,47 @@ color: #656464;
 }
 .header button:hover{
   background: #217cf4ba;
+}
+.b2{
+  cursor: pointer;
+
+  width: 100%;
+  min-width: 123px;
+  max-width: 123px;
+  height: 50px;
+
+  background: #217BF4;
+  box-shadow: 0px 7px 22px -6px rgba(33, 123, 244, 0.34);
+  border-radius: 14px;
+  border: transparent;
+
+  font-weight: 600;
+  color: white;
+}
+.b2:hover{
+  background: #217cf4ba;
+}
+
+.b3{
+  cursor: pointer;
+
+  width: 100%;
+  min-width: 123px;
+  max-width: 123px;
+  height: 50px;
+
+  background: none;
+
+  border: 1px solid #217cf493;
+  box-shadow: 0px 7px 22px -6px rgba(33, 123, 244, 0.34);
+  border-radius: 14px;
+
+
+  font-weight: 500;
+  color: #217BF4;
+
+
+
 }
 
 .header nav ul li{
@@ -143,51 +189,20 @@ ul{
 }
 
 .content .left .b1{
-  color: rgba(33, 123, 244, 1);
+  color: #217BF4;
 
   width: 177px;
   height: 36px;
 
-  background: #217cf4;
-  opacity: 0.1;
+  background-color:#e7f0fd;
+
   border-radius: 8px;
   border: transparent;
+  box-shadow: #20202d;
+
+  cursor: pointer;
 }
 
 .content .right img{
   margin-right: 135px;
-}
-
-.community {
-  background: linear-gradient(
-    0deg,
-    rgba(241, 246, 253, 0) 1.63%,
-    #f1f6fd 20.5%,
-    #f1f6fd 58.57%,
-    #ffffff 100%
-  );
-  margin-bottom: 37px;
-
-  text-align: center;
-}
-
-.headmembers {
-  text-align: center;
-}
-
-.publi {
-  background: #e5f0fd;
-  margin-bottom: 130px;
-}
-
-.headlatestnews {
-  text-align: center;
-}
-
-.footer {
-  background-color: #2b2b39;
-}
-
-.bottomfooter {
-  background-color: #20202d;
 }
