--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,7 @@ h1 {
   font-weight: 700;
   font-size: 36px;
 
-  color: #0a093d;
+  color: #0A093D;
 }
 
 h1 strong {
@@ -120,7 +120,7 @@ h1 strong {
   font-weight: 700;
   font-size: 56px;
 
-  color: #0a093d;
+  color: #0A093D;
 }
 
 h2 {
@@ -131,32 +131,36 @@ h2 {
   font-weight: 500;
   font-size: 18px;
 
-  color: #217bf4;
+  color: #217BF4;
 }
 
 p {
-  margin: auto;
-  margin-bottom: 64px;
-  width: auto;
-  height: auto;
+margin: auto;
+margin-bottom: 64px;
+width: auto;
+height: auto;
 
-  font-weight: 400;
-  font-size: 16px;
+font-weight: 400;
+font-size: 16px;
 
-  color: #656464;
+color: #656464;
 }
 
 .home {
-  background: linear-gradient(311.76deg, #d4e7fe -15.24%, #ffffff 78.85%);
-  background-image: url(../img/bg.svg);
-  width: 1440px;
-  height: 746px;
+  background: linear-gradient( #ffffff 15%, #d4e7fe 85%);
+  width: 100%;
+}
+
+.initial-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .header {
   display: flex;
   flex-direction: row;
-  /*justify-content: space-between;   esse fdp tava me comendo :@*/
   justify-content: center;
   align-items: center;
   height: 90px;
@@ -167,28 +171,30 @@ p {
 .header nav {
   border: none;
   cursor: pointer;
-  background: none;
+  background:none;
   text-decoration: none;
 }
 
-.nav {
+.nav{
   font-weight: 500;
   font-size: 14px;
   flex-direction: row;
   color: #656464;
   padding-left: 72px;
 }
-.nav li {
-  display: inline-block;
+.nav li{
+    display: inline-block;
 }
 
-.header button {
+.header button{
   cursor: pointer;
   margin-left: 526px;
-  width: 123px;
+  width: 100%;
+  min-width: 123px;
+  max-width: 123px;
   height: 50px;
 
-  background: #217bf4;
+  background: #217BF4;
   box-shadow: 0px 7px 22px -6px rgba(33, 123, 244, 0.34);
   border-radius: 14px;
   border: transparent;
@@ -196,20 +202,61 @@ p {
   font-weight: 600;
   color: white;
 }
-.header button:hover {
+.header button:hover{
+  background: #217cf4ba;
+}
+.b2{
+  cursor: pointer;
+
+  width: 100%;
+  min-width: 123px;
+  max-width: 123px;
+  height: 50px;
+
+  background: #217BF4;
+  box-shadow: 0px 7px 22px -6px rgba(33, 123, 244, 0.34);
+  border-radius: 14px;
+  border: transparent;
+
+  font-weight: 600;
+  color: white;
+}
+.b2:hover{
   background: #217cf4ba;
 }
 
-.header nav ul li {
+.b3{
+  cursor: pointer;
+
+  width: 100%;
+  min-width: 123px;
+  max-width: 123px;
+  height: 50px;
+
+  background: none;
+
+  border: 1px solid #217cf493;
+  box-shadow: 0px 7px 22px -6px rgba(33, 123, 244, 0.34);
+  border-radius: 14px;
+
+
+  font-weight: 500;
+  color: #217BF4;
+
+
+
+}
+
+.header nav ul li{
   padding-right: 27px;
 }
 
-.header nav ul li span {
+.header nav ul li span{
   font-weight: 600;
-  color: #2b2b39;
+  color: #2B2B39;
 }
 
-ul {
+ul{
   list-style: none;
 }
 
@@ -219,33 +266,38 @@ ul {
   height: 34px;
 }
 
-.content {
+.content{
   display: flex;
   flex-direction: row;
   width: fit-content;
 }
 
-.content .left {
+.content .left{
   margin-left: 135px;
   margin-top: 125px;
   margin-bottom: 165px;
 }
 
-.content .left .b1 {
-  color: rgba(33, 123, 244, 1);
+.content .left .b1{
+  color: #217BF4;
 
   width: 177px;
   height: 36px;
 
-  background: #217cf4;
-  opacity: 0.1;
+  background-color:#e7f0fd;
+
   border-radius: 8px;
   border: transparent;
+  box-shadow: #20202d;
+
+  cursor: pointer;
 }
 
-.content .right img {
+.content .right img{
   margin-right: 135px;
 }
+
+
 
 .community {
   background: linear-gradient(
